[package]
name = "edubyte-metadata"
version = "0.1.0"
edition = "2021"
description = "The library that controls all of edu-byte content's metadata"
license-file = "gpl-2.0.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
paste = "1.0.12"
quote = "1.0.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
